--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -8,7 +8,6 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
-        android:padding="8dp"
         android:elevation="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,8 +24,9 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
+                android:paddingTop="24dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 app:layout_collapseMode="pin">
 
                 <ImageView
@@ -41,18 +41,18 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:elevation="5dp"
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:elevation="1dp"
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:scrollbarStyle="outsideOverlay"
-            android:paddingTop="116dp"
+            android:paddingTop="80dp"
             android:paddingLeft="@dimen/list_side_margin"
             android:paddingRight="@dimen/list_side_margin"
             android:paddingBottom="28dp" />
