setup app bar and adjust image scale

--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -17,7 +17,7 @@
 
         <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="100dp"
